--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vuex": "^3.6.0"
   },
   "devDependencies": {
+    "@nuxtjs/device": "^2.0.0",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
