--- a/.github/workflows/pr-test-and-lint.yml
+++ b/.github/workflows/pr-test-and-lint.yml
@@ -1,9 +1,12 @@
-name: Publish GH Pages
+name: Test and Lint
 
-on: [push, pull_request]
+on:
+  pull_request:
+    branches:
+      - master
 
 jobs:
-  cd:
+  test_and_lint:
     runs-on: ubuntu-latest
 
     strategy:
@@ -27,11 +30,8 @@ jobs:
         env:
           YARN_IGNORE_NODE: 1
 
-      - name: Build
-        run: yarn run build
+      - name: Run tests
+        run: yarn test
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build
+      - name: Run linting
+        run: yarn lint
