--- a/.github/workflows/publish-gh-pages.yml
+++ b/.github/workflows/publish-gh-pages.yml
@@ -32,6 +32,8 @@ jobs:
 
       - name: Build
         run: yarn run build
+        env:
+          YARN_IGNORE_NODE: 1
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v4
